[gd_scene load_steps=4 format=3 uid="uid://cpjjhmw4gdy70"]

[ext_resource type="Script" path="res://actors/projectile/projectile.gd" id="1_6loc4"]
[ext_resource type="Texture2D" uid="uid://duldiy3f1d57c" path="res://actors/projectile/bomb/rainbow_ball.png" id="2_3oabx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qbs76"]
radius = 5.0

[node name="Projectile" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_6loc4")

[node name="MainSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_3oabx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qbs76")

[node name="TimeToLive" type="Timer" parent="."]
wait_time = 0.002
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_time_to_live_timeout"]
